# projet-tsp

./: .dockerignore  .gitignore  Dockerfile  README.md  avant-opt.md  docker-compose.yml  final.md  pyproject.toml  sheikh-deploy.sh
experiments/: parallel_worker.py  run_comparison.py  run_single.py
results/experiment_20260616_175415/: experiment_config.json  raw_results.csv  summary_statistics.csv  wilcoxon_tests.csv
results/experiment_20260616_175558/: experiment_config.json  raw_results.csv  summary_statistics.csv  wilcoxon_tests.csv
results/experiment_20260616_183003/: experiment_config.json  raw_results.csv  summary_statistics.csv  wilcoxon_tests.csv
results/experiment_20260617_173656/: experiment_config.json  raw_results.csv  summary_statistics.csv  wilcoxon_tests.csv
scripts/: expand_final_md.py  plot_results.py
src/tsp_sba/: __init__.py  config.py
src/tsp_sba/algorithms/: __init__.py  ea.py  ica.py  sba.py
src/tsp_sba/experiments/: runner.py
src/tsp_sba/operators/: __init__.py  genetic.py  local_search.py
src/tsp_sba/statistics/: wilcoxon.py
src/tsp_sba/tsp/: instance.py
src/tsp_sba/utils/: __init__.py
